fix: change checkbox input visibility to sr-only for better accessibility

--- a/resources/css/components/checkbox.css
+++ b/resources/css/components/checkbox.css
@@ -6,7 +6,7 @@
 
 .checkbox input,
 .woocommerce-form__label-for-checkbox input {
-  @apply hidden;
+  @apply sr-only;
 }
 
 .checkbox::before,
